After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 766663 - bad: fix leaks in tests
bad: fix leaks in tests
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal minor
: 1.9.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks: 767856
 
 
Reported: 2016-05-19 14:22 UTC by Guillaume Desmottes
Modified: 2016-06-27 06:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
autoconvert: fix factories leak in test (932 bytes, patch)
2016-05-19 14:23 UTC, Guillaume Desmottes
committed Details | Review
audioaggregator: fix buffer leak (1.53 KB, patch)
2016-05-19 14:23 UTC, Guillaume Desmottes
committed Details | Review
audiointerleave: fix message leaks by flushing the bus (1.15 KB, patch)
2016-05-19 14:23 UTC, Guillaume Desmottes
committed Details | Review
fix event leaks in tests (2.08 KB, patch)
2016-05-19 14:24 UTC, Guillaume Desmottes
committed Details | Review
fix buffer leaks in tests (919 bytes, patch)
2016-05-19 14:24 UTC, Guillaume Desmottes
committed Details | Review
camerabin: fix element leak in test (751 bytes, patch)
2016-05-19 14:24 UTC, Guillaume Desmottes
committed Details | Review
uvch264demux: fix buffer leaks in test (1.22 KB, patch)
2016-05-19 14:24 UTC, Guillaume Desmottes
committed Details | Review
glupload: fix shader leak in test (734 bytes, patch)
2016-05-19 14:24 UTC, Guillaume Desmottes
committed Details | Review
glimagesink: properly setup/teardown tests (1.44 KB, patch)
2016-05-19 14:24 UTC, Guillaume Desmottes
committed Details | Review
glimagesink: fix query leak in test (921 bytes, patch)
2016-05-19 14:24 UTC, Guillaume Desmottes
committed Details | Review

Description Guillaume Desmottes 2016-05-19 14:22:29 UTC
.
Comment 1 Guillaume Desmottes 2016-05-19 14:23:46 UTC
Created attachment 328194 [details] [review]
autoconvert: fix factories leak in test

The factories returned by gst_registry_find_feature() have to be
unreffed.
Comment 2 Guillaume Desmottes 2016-05-19 14:23:51 UTC
Created attachment 328195 [details] [review]
audioaggregator: fix buffer leak

If the pad was still owning a buffer when being destroyed it was leaked.

Fix a leak with the test_flush_start_flush_stop test.
Comment 3 Guillaume Desmottes 2016-05-19 14:23:57 UTC
Created attachment 328196 [details] [review]
audiointerleave: fix message leaks by flushing the bus
Comment 4 Guillaume Desmottes 2016-05-19 14:24:02 UTC
Created attachment 328197 [details] [review]
fix event leaks in tests

The events are supposed to be unreffed when finishing the test, not
reffed.
Comment 5 Guillaume Desmottes 2016-05-19 14:24:08 UTC
Created attachment 328198 [details] [review]
fix buffer leaks in tests

gst_check_drop_buffers() release the buffers exchanged during the test.
Comment 6 Guillaume Desmottes 2016-05-19 14:24:13 UTC
Created attachment 328199 [details] [review]
camerabin: fix element leak in test
Comment 7 Guillaume Desmottes 2016-05-19 14:24:18 UTC
Created attachment 328200 [details] [review]
uvch264demux: fix buffer leaks in test

The mock chain functions aren't unreffing the buffers so the caller
should do it.
Comment 8 Guillaume Desmottes 2016-05-19 14:24:24 UTC
Created attachment 328201 [details] [review]
glupload: fix shader leak in test
Comment 9 Guillaume Desmottes 2016-05-19 14:24:30 UTC
Created attachment 328202 [details] [review]
glimagesink: properly setup/teardown tests

tcase_add_checked_fixture() is suppose to call the setup and teardown
functions so the tests don't have to do it manually.
Comment 10 Guillaume Desmottes 2016-05-19 14:24:35 UTC
Created attachment 328203 [details] [review]
glimagesink: fix query leak in test
Comment 11 Sebastian Dröge (slomo) 2016-06-21 07:55:08 UTC
Attachment 328194 [details] pushed as e925a8a - autoconvert: fix factories leak in test
Attachment 328195 [details] pushed as 172529e - audioaggregator: fix buffer leak
Attachment 328196 [details] pushed as 2ec2e15 - audiointerleave: fix message leaks by flushing the bus
Attachment 328197 [details] pushed as fc5cb1e - fix event leaks in tests
Attachment 328198 [details] pushed as a68534d - fix buffer leaks in tests
Attachment 328199 [details] pushed as 9694e7e - camerabin: fix element leak in test
Attachment 328200 [details] pushed as bebe4ca - uvch264demux: fix buffer leaks in test
Attachment 328201 [details] pushed as 6a02c8a - glupload: fix shader leak in test
Attachment 328202 [details] pushed as e071510 - glimagesink: properly setup/teardown tests
Attachment 328203 [details] pushed as 0d6359d - glimagesink: fix query leak in test
Comment 12 Sebastian Dröge (slomo) 2016-06-27 06:33:26 UTC
The audioaggregator buffer leak fix is in 1.8 now